--- a/isl.ipynb
+++ b/isl.ipynb
@@ -4,245 +4,153 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cb01de35",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install mediapipe opencv-python pandas\n",
+    "# STEP 1: Install dependencies (run once)\n",
+    "!apt-get update -qq && apt-get install -qq imagemagick\n",
+    "!sed -i 's/<policy domain=\"coder\" rights=\"none\" pattern=\"TXT\" \\/>/<policy domain=\"coder\" rights=\"read|write\" pattern=\"TXT\" \\/>/' /etc/ImageMagick-6/policy.xml\n",
+    "!pip install -q google-generativeai gTTS moviepy requests Pillow python-dotenv\n",
     "\n",
-    "\n",
-    "import cv2\n",
-    "import mediapipe as mp\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "# STEP 2: Imports\n",
     "import os\n",
-    "from IPython.display import display, Javascript\n",
-    "from google.colab.output import eval_js\n",
-    "from base64 import b64decode\n",
-    "import io\n",
-    "from PIL import Image\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def take_photo(filename='photo.jpg', quality=0.8):\n",
-    "  js = Javascript('''\n",
-    "    async function takePhoto(quality) {\n",
-    "      const div = document.createElement('div');\n",
-    "      const capture = document.createElement('button');\n",
-    "      capture.textContent = '📸 Capture';\n",
-    "      div.appendChild(capture);\n",
-    "\n",
-    "      const video = document.createElement('video');\n",
-    "      video.style.display = 'block';\n",
-    "      const stream = await navigator.mediaDevices.getUserMedia({video: true});\n",
-    "\n",
-    "      document.body.appendChild(div);\n",
-    "      div.appendChild(video);\n",
-    "      video.srcObject = stream;\n",
-    "      await video.play();\n",
-    "\n",
-    "      google.colab.output.setIframeHeight(document.documentElement.scrollHeight, true);\n",
-    "\n",
-    "      await new Promise((resolve) => capture.onclick = resolve);\n",
-    "\n",
-    "      const canvas = document.createElement('canvas');\n",
-    "      canvas.width = video.videoWidth;\n",
-    "      canvas.height = video.videoHeight;\n",
-    "      canvas.getContext('2d').drawImage(video, 0, 0);\n",
-    "      stream.getTracks().forEach(track => track.stop());\n",
-    "      div.remove();\n",
-    "\n",
-    "      return canvas.toDataURL('image/jpeg', quality);\n",
-    "    }\n",
-    "  ''')\n",
-    "  display(js)\n",
-    "  data = eval_js('takePhoto({})'.format(quality))\n",
-    "  binary = b64decode(data.split(',')[1])\n",
-    "  with open(filename, 'wb') as f:\n",
-    "    f.write(binary)\n",
-    "  return filename\n",
-    "\n",
-    "\n",
-    "mp_hands = mp.solutions.hands\n",
-    "hands = mp_hands.Hands(static_image_mode=True, max_num_hands=1, min_detection_confidence=0.5)\n",
-    "mp_drawing = mp.solutions.drawing_utils\n",
-    "\n",
-    "def extract_keypoints(results):\n",
-    "    if results.multi_hand_landmarks:\n",
-    "        hand = results.multi_hand_landmarks[0]\n",
-    "        keypoints = []\n",
-    "        for lm in hand.landmark:\n",
-    "            keypoints.append(lm.x)\n",
-    "            keypoints.append(lm.y)\n",
-    "        return keypoints\n",
-    "    else:\n",
-    "        return None\n",
-    "\n",
-    "\n",
-    "def create_dataset_folder(label):\n",
-    "    folder = f\"/content/dataset/{label}\"\n",
-    "    os.makedirs(folder, exist_ok=True)\n",
-    "    return folder\n",
-    "\n",
-    "\n",
-    "# 🔁 Repeat this block for each image you want to capture\n",
-    "label = \"namaste\"  # Change this label each time you record a new sign\n",
-    "filename = take_photo()\n",
-    "image = cv2.imread(filename)\n",
-    "image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "results = hands.process(image_rgb)\n",
-    "\n",
-    "if results.multi_hand_landmarks:\n",
-    "    mp_drawing.draw_landmarks(image, results.multi_hand_landmarks[0], mp_hands.HAND_CONNECTIONS)\n",
-    "    keypoints = extract_keypoints(results)\n",
-    "    if keypoints:\n",
-    "        folder = create_dataset_folder(label)\n",
-    "        filepath = os.path.join(folder, f\"{label}_{np.random.randint(1000)}.csv\")\n",
-    "        pd.DataFrame([keypoints]).to_csv(filepath, index=False)\n",
-    "        print(f\"✅ Keypoints saved to {filepath}\")\n",
-    "    else:\n",
-    "        print(\"⚠️ Hand detected but keypoints missing.\")\n",
-    "else:\n",
-    "    print(\"🚫 No hand detected.\")\n",
-    "\n",
-    "# Show the captured and annotated image\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
-    "plt.axis('off')\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "import glob\n",
-    "\n",
-    "def load_dataset(data_dir=\"/content/dataset\"):\n",
-    "    all_data = []\n",
-    "    all_labels = []\n",
-    "\n",
-    "    for label_folder in os.listdir(data_dir):\n",
-    "        folder_path = os.path.join(data_dir, label_folder)\n",
-    "        for file in glob.glob(f\"{folder_path}/*.csv\"):\n",
-    "            df = pd.read_csv(file)\n",
-    "            if df.shape[1] == 42:  # Make sure it’s a full hand keypoints file\n",
-    "                all_data.append(df.values[0])\n",
-    "                all_labels.append(label_folder)\n",
-    "\n",
-    "    return np.array(all_data), np.array(all_labels)\n",
-    "\n",
-    "X, y = load_dataset()\n",
-    "print(\"Shape of X:\", X.shape)\n",
-    "print(\"Labels:\", np.unique(y))\n",
-    "\n",
-    "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "\n",
-    "# Split the dataset\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Train model\n",
-    "clf = RandomForestClassifier()\n",
-    "clf.fit(X_train, y_train)\n",
-    "\n",
-    "# Predict and evaluate\n",
-    "y_pred = clf.predict(X_test)\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "print(\"Report:\\n\", classification_report(y_test, y_pred))\n",
-    "\n",
-    "\n",
-    "import cv2\n",
-    "import mediapipe as mp\n",
-    "from IPython.display import display, Javascript\n",
-    "from google.colab.output import eval_js\n",
-    "from base64 import b64decode\n",
-    "from PIL import Image\n",
-    "import io\n",
+    "import requests\n",
+    "import google.generativeai as genai\n",
+    "from gtts import gTTS\n",
+    "from moviepy.editor import *\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
     "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "# MediaPipe hands\n",
-    "mp_hands = mp.solutions.hands\n",
-    "hands = mp_hands.Hands(static_image_mode=True, max_num_hands=1, min_detection_confidence=0.5)\n",
+    "# STEP 3: Configure Gemini API Key from .env\n",
+    "load_dotenv()  # Loads variables from .env\n",
+    "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")\n",
+    "if not GEMINI_API_KEY:\n",
+    "    raise ValueError(\"Gemini API Key not found! Please set GEMINI_API_KEY in your .env file.\")\n",
+    "genai.configure(api_key=GEMINI_API_KEY)\n",
     "\n",
-    "def take_photo_for_prediction(filename='test.jpg', quality=0.8):\n",
-    "    js = Javascript('''\n",
-    "        async function takePhoto(quality) {\n",
-    "            const div = document.createElement('div');\n",
-    "            const capture = document.createElement('button');\n",
-    "            capture.textContent = '📸 Capture';\n",
-    "            div.appendChild(capture);\n",
+    "# STEP 4: Generate AI Script from Topic\n",
+    "def generate_script(topic):\n",
+    "    model = genai.GenerativeModel('models/gemini-1.5-flash')\n",
+    "    prompt = f\"Write an engaging 6-8 line YouTube Shorts script on the topic: '{topic}'. Keep it short, clear, and catchy.\"\n",
+    "    response = model.generate_content(prompt)\n",
+    "    return response.text\n",
     "\n",
-    "            const video = document.createElement('video');\n",
-    "            video.style.display = 'block';\n",
-    "            const stream = await navigator.mediaDevices.getUserMedia({video: true});\n",
+    "# STEP 5: Download images function (with fallback)\n",
+    "def download_images(keywords):\n",
+    "    os.makedirs(\"images\", exist_ok=True)\n",
+    "    headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
+    "    for i, kw in enumerate(keywords):\n",
+    "        try:\n",
+    "            url = f\"https://source.unsplash.com/720x480/?{kw.replace(' ', '%20')}\"\n",
+    "            r = requests.get(url, headers=headers, timeout=10)\n",
+    "            with open(f\"images/img{i+1}.jpg\", \"wb\") as f:\n",
+    "                f.write(r.content)\n",
+    "        except:\n",
+    "            img = Image.new('RGB', (720, 480), color='gray')\n",
+    "            img.save(f\"images/img{i+1}.jpg\")\n",
     "\n",
-    "            document.body.appendChild(div);\n",
-    "            div.appendChild(video);\n",
-    "            video.srcObject = stream;\n",
-    "            await video.play();\n",
+    "# STEP 6: Create TTS audio clip per line\n",
+    "def create_tts_audio(line, idx):\n",
+    "    filename = f\"voice_line_{idx}.mp3\"\n",
+    "    tts = gTTS(text=line, lang='en')\n",
+    "    tts.save(filename)\n",
+    "    return AudioFileClip(filename)\n",
     "\n",
-    "            google.colab.output.setIframeHeight(document.documentElement.scrollHeight, true);\n",
+    "# STEP 7: Create video clip with image + text overlay\n",
+    "def create_clip(line, img_path, duration):\n",
+    "    try:\n",
+    "        bg = Image.open(img_path).resize((720, 480)).convert('RGB')\n",
+    "    except:\n",
+    "        bg = Image.new('RGB', (720, 480), color='gray')\n",
+    "    draw = ImageDraw.Draw(bg)\n",
+    "    try:\n",
+    "        font = ImageFont.truetype(\"DejaVuSans-Bold.ttf\", 36)\n",
+    "    except:\n",
+    "        font = ImageFont.load_default()\n",
+    "    bbox = draw.textbbox((0, 0), line, font=font)\n",
+    "    w = bbox[2] - bbox[0]\n",
+    "    h = bbox[3] - bbox[1]\n",
+    "    position = ((720 - w)//2, 480 - h - 40)\n",
+    "    draw.text(position, line, font=font, fill='white', stroke_width=2, stroke_fill='black')\n",
     "\n",
-    "            await new Promise((resolve) => capture.onclick = resolve);\n",
+    "    frame = np.array(bg).astype(np.uint8)\n",
+    "    clip = ImageClip(frame).set_duration(duration)\n",
+    "    return clip\n",
     "\n",
-    "            const canvas = document.createElement('canvas');\n",
-    "            canvas.width = video.videoWidth;\n",
-    "            canvas.height = video.videoHeight;\n",
-    "            canvas.getContext('2d').drawImage(video, 0, 0);\n",
-    "            stream.getTracks().forEach(track => track.stop());\n",
-    "            div.remove();\n",
-    "\n",
-    "            return canvas.toDataURL('image/jpeg', quality);\n",
-    "        }\n",
-    "    ''')\n",
-    "    display(js)\n",
-    "    data = eval_js('takePhoto({})'.format(quality))\n",
-    "    binary = b64decode(data.split(',')[1])\n",
-    "    with open(filename, 'wb') as f:\n",
-    "        f.write(binary)\n",
-    "    return filename\n",
-    "\n",
-    "\n",
-    "filename = take_photo_for_prediction()\n",
-    "image = cv2.imread(filename)\n",
-    "image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "results = hands.process(image_rgb)\n",
-    "\n",
-    "if results.multi_hand_landmarks:\n",
-    "    hand_landmarks = results.multi_hand_landmarks[0]\n",
-    "    keypoints = []\n",
-    "    for lm in hand_landmarks.landmark:\n",
-    "        keypoints.extend([lm.x, lm.y])\n",
-    "\n",
-    "    # Ensure it's 42 features\n",
-    "    if len(keypoints) == 42:\n",
-    "        prediction = clf.predict([keypoints])[0]\n",
-    "        print(\"✅ Predicted Sign:\", prediction)\n",
+    "# STEP 8: Optional background music loader\n",
+    "def load_background_music(path, duration):\n",
+    "    if not os.path.exists(path):\n",
+    "        print(f\"Background music file '{path}' not found, skipping bgm.\")\n",
+    "        return None\n",
+    "    bgm = AudioFileClip(path).volumex(0.15)\n",
+    "    if bgm.duration < duration:\n",
+    "        bgm = afx.audio_loop(bgm, duration=duration)\n",
     "    else:\n",
-    "        print(\"⚠️ Incomplete hand detected.\")\n",
-    "else:\n",
-    "    print(\"❌ No hand detected.\")\n",
+    "        bgm = bgm.subclip(0, duration)\n",
+    "    return bgm\n",
     "\n",
-    "# Move into your repo directory (if not already there)\n",
-    "%cd your-repo\n",
+    "# ===== MAIN SCRIPT =====\n",
     "\n",
-    "# Stage changes (this adds your file to Git tracking)\n",
-    "!git add .\n",
+    "topic = \"The Rise of Electric Vehicles\"  # Change your topic here\n",
     "\n",
-    "# Commit changes with a message\n",
-    "!git commit -m \"Added notebook from Colab\"\n",
+    "print(\"Generating script...\")\n",
+    "script_text = generate_script(topic)\n",
+    "print(\"Generated script:\\n\", script_text)\n",
     "\n",
-    "# Push to GitHub (you'll be prompted for GitHub username and token)\n",
-    "!git push origin main\n"
+    "lines = [line.strip() for line in script_text.split('\\n') if line.strip()]\n",
+    "\n",
+    "print(\"Downloading images...\")\n",
+    "download_images(lines)\n",
+    "\n",
+    "print(\"Generating audio clips...\")\n",
+    "audio_clips = []\n",
+    "for i, line in enumerate(lines):\n",
+    "    audio = create_tts_audio(line, i)\n",
+    "    audio_clips.append(audio)\n",
+    "\n",
+    "print(\"Creating video clips...\")\n",
+    "video_clips = []\n",
+    "for i, (line, audio) in enumerate(zip(lines, audio_clips)):\n",
+    "    clip = create_clip(line, f\"images/img{i+1}.jpg\", duration=audio.duration)\n",
+    "    clip = clip.set_audio(audio)\n",
+    "    video_clips.append(clip)\n",
+    "\n",
+    "print(\"Concatenating clips...\")\n",
+    "final_video = concatenate_videoclips(video_clips, method=\"compose\")\n",
+    "\n",
+    "# Uncomment below to add background music\n",
+    "# !wget -q -O bgm.mp3 https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Komiku/Its_time_for_adventure/Komiku_-_12_-_The_time_is_now.mp3\n",
+    "# bgm = load_background_music(\"bgm.mp3\", final_video.duration)\n",
+    "# if bgm:\n",
+    "#     final_audio = CompositeAudioClip([final_video.audio, bgm])\n",
+    "#     final_video = final_video.set_audio(final_audio)\n",
+    "\n",
+    "output_filename = \"final_ev_video.mp4\"\n",
+    "print(f\"Exporting final video to {output_filename} ...\")\n",
+    "final_video.write_videofile(output_filename, fps=24, codec=\"libx264\", audio_codec=\"aac\")\n",
+    "\n",
+    "# Cleanup\n",
+    "for i in range(len(lines)):\n",
+    "    fname = f\"voice_line_{i}.mp3\"\n",
+    "    if os.path.exists(fname):\n",
+    "        os.remove(fname)\n",
+    "\n",
+    "print(\"Done! Your video is ready.\")\n",
+    "from IPython.display import Video\n",
+    "Video(output_filename, embed=True)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
